<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aplan3"
    tools:context=".AccueilActivity.AccueilActivity">


    <ImageView
        android:id="@+id/logo_eseo"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_eseo"
        android:src="@drawable/eseo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/texte_accueil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_eseo" />

    <ImageView
        android:id="@+id/logo_scan_ble"
        android:layout_width="158dp"
        android:layout_height="153dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/logo_ble"
        android:src="@drawable/ble5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_accueil" />


</androidx.constraintlayout.widget.ConstraintLayout>